force-app/main/default/objects/Opportunity/fields/Manager_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Manager_Forecast__c</fullName>
    <label>Manager Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>