force-app/main/default/objects/Opportunity/fields/Marketing_Influenced__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Influenced__c</fullName>
    <description>To identify the Marketing Influenced Opportunities</description>
    <label>Marketing Influenced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>DSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>