force-app/main/default/objects/Opportunity/fields/Max_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Sequence_Number__c</fullName>
    <label>Max Sequence Number</label>
    <summarizedField>OpportunityLineItem.Sequence_Number__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>