force-app/main/default/objects/Opportunity/fields/Mediation_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Live_Date__c</fullName>
    <label>Mediation Live Date</label>
    <type>Date</type>
</CustomField>