force-app/main/default/objects/Opportunity/fields/Mediation_Platform__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Platform__c</fullName>
    <label>Mediation Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AddAppTr</fullName>
                <isActive>false</isActive>
                <label>AddAppTr</label>
            </value>
            <value>
                <fullName>AdMarvel</fullName>
                <isActive>false</isActive>
                <label>AdMarvel</label>
            </value>
            <value>
                <fullName>AdMob</fullName>
            </value>
            <value>
                <fullName>AdMost</fullName>
            </value>
            <value>
                <fullName>Aequus</fullName>
            </value>
            <value>
                <fullName>AerServ</fullName>
                <isActive>false</isActive>
                <label>AerServ</label>
            </value>
            <value>
                <fullName>AppLovin MAX</fullName>
            </value>
            <value>
                <fullName>AppNexus</fullName>
                <isActive>false</isActive>
                <label>AppNexus</label>
            </value>
            <value>
                <fullName>Appodeal</fullName>
                <isActive>false</isActive>
                <label>Appodeal</label>
            </value>
            <value>
                <fullName>Custom In House</fullName>
            </value>
            <value>
                <fullName>Custom Mediation</fullName>
            </value>
            <value>
                <fullName>Digital Turbine</fullName>
            </value>
            <value>
                <fullName>DoubleClick/DFP</fullName>
            </value>
            <value>
                <fullName>Enhance</fullName>
                <isActive>false</isActive>
                <label>Enhance</label>
            </value>
            <value>
                <fullName>FreeWheel</fullName>
                <isActive>false</isActive>
                <label>FreeWheel</label>
            </value>
            <value>
                <fullName>Fyber</fullName>
            </value>
            <value>
                <fullName>GAM (Google Ad Manager)</fullName>
            </value>
            <value>
                <fullName>Google OB</fullName>
            </value>
            <value>
                <fullName>HyperBid</fullName>
            </value>
            <value>
                <fullName>HyprMX</fullName>
                <isActive>false</isActive>
                <label>HyprMX</label>
            </value>
            <value>
                <fullName>InMobi</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
                <isActive>false</isActive>
                <label>MAX</label>
            </value>
            <value>
                <fullName>Meson</fullName>
            </value>
            <value>
                <fullName>Millennial</fullName>
                <isActive>false</isActive>
                <label>Millennial</label>
            </value>
            <value>
                <fullName>Mobfox</fullName>
                <isActive>false</isActive>
                <label>Mobfox</label>
            </value>
            <value>
                <fullName>MoPub</fullName>
                <isActive>false</isActive>
                <label>MoPub</label>
            </value>
            <value>
                <fullName>Nimbus</fullName>
            </value>
            <value>
                <fullName>PreBid</fullName>
            </value>
            <value>
                <fullName>Smaato</fullName>
                <isActive>false</isActive>
                <label>Smaato</label>
            </value>
            <value>
                <fullName>SuperSonic/ironsource</fullName>
                <isActive>false</isActive>
                <label>SuperSonic/ironsource</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>