force-app/main/default/objects/Opportunity/fields/Mediation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Stage__c</fullName>
    <description>This is the Mediation stage for an active publisher working with Publisher Account Management</description>
    <inlineHelpText>This is the Mediation stage for an active publisher working with Publisher Account Management</inlineHelpText>
    <label>Mediation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed Yet</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Shown Interest</fullName>
            </value>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Demo Given</fullName>
            </value>
            <value>
                <fullName>Ad Sources Created/Testing</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Live on Mediation</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>IO Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>