force-app/main/default/objects/Opportunity/fields/Mutual_Closing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Closing_Plan__c</fullName>
    <label>Mutual Closing Plan</label>
    <type>TextArea</type>
</CustomField>