force-app/main/default/objects/Opportunity/fields/NET_PAYABLE_BY_CUSTOMER_USD_For_PDF__c.field-meta.xml
<CustomField>
    <fullName>NET_PAYABLE_BY_CUSTOMER_USD_For_PDF__c</fullName>
    <formula>IF(Net_Payable_By_Customer__c &lt;&gt; 0 ,Net_Payable_By_Customer__c /Convertion_Rate_From_IO__c ,0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET PAYABLE BY CUSTOMER USD For PDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>