force-app/main/default/objects/Opportunity/fields/North_America__c.field-meta.xml
<CustomField>
    <fullName>North_America__c</fullName>
    <description>Created as part of Supply 2.0 changes under Regional Inventory Distribution</description>
    <label>North America</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>