force-app/main/default/objects/Opportunity/fields/Number_of_IO_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_IO_s__c</fullName>
    <label>Number of IO&apos;s</label>
    <summaryFilterItems>
        <field>Insertion_Order__c.IO_Type__c</field>
        <operation>equals</operation>
        <value>Standard, Glance Standard</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion_Order__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>