force-app/main/default/objects/Opportunity/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <description>For storing Objective on the Opportunity records - as of now visible only to system administrators</description>
    <label>Objectives</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generate Awareness</fullName>
            </value>
            <value>
                <fullName>App Download</fullName>
            </value>
            <value>
                <fullName>Generate Leads</fullName>
            </value>
            <value>
                <fullName>Drive Traffic</fullName>
            </value>
            <value>
                <fullName>Promote Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>