force-app/main/default/objects/Opportunity/fields/of_App_Downloads__c.field-meta.xml
<CustomField>
    <fullName>of_App_Downloads__c</fullName>
    <label># of App Downloads</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>of_App_Downloads</valueSetName>
    </valueSet>
</CustomField>