force-app/main/default/objects/Opportunity/fields/Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Amount__c</fullName>
    <label>Opportunity Amount</label>
    <summarizedField>Insertion_Order__c.Opp_IO_Amount__c</summarizedField>
    <summaryForeignKey>Insertion_Order__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>