force-app/main/default/objects/Opportunity/fields/opp_signed_date__c.field-meta.xml
<CustomField>
    <fullName>opp_signed_date__c</fullName>
    <label>opp signed date</label>
    <type>DateTime</type>
</CustomField>