force-app/main/default/objects/Opportunity/fields/Opportunity_For__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_For__c</fullName>
    <inlineHelpText>Select Opportunity type here</inlineHelpText>
    <label>Opportunity For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand Gen for Onsite placement (DON)</fullName>
            </value>
            <value>
                <fullName>Demand Gen for Offsite placement (DOF)</fullName>
            </value>
            <value>
                <fullName>Offsite Supply (OS)</fullName>
            </value>
            <value>
                <fullName>Platform opportunity for Onsite (PON)</fullName>
            </value>
            <value>
                <fullName>Platform opportunity for Offsite (POF)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>