force-app/main/default/objects/Opportunity/fields/Opportunity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment__c</fullName>
    <label>Opportunity Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Primary Mediation</fullName>
            </value>
            <value>
                <fullName>Programmatic</fullName>
            </value>
            <value>
                <fullName>Monetization Partner</fullName>
            </value>
            <value>
                <fullName>White Label partner</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
            <value>
                <fullName>Video/SPA/Display</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
                <isActive>false</isActive>
                <label>Audience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>