force-app/main/default/objects/Opportunity/fields/Opportunity_SubType__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SubType__c</fullName>
    <label>Opportunity SubType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meson Prime</fullName>
            </value>
            <value>
                <fullName>Meson Wrap</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Gaming - Supply</fullName>
            </value>
            <value>
                <fullName>Non Gaming - Supply</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Glance</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Etisalat</fullName>
            </value>
            <value>
                <fullName>Appsumer</fullName>
            </value>
            <value>
                <fullName>Pulse</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>