force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>This field needs to be populated only in case of Exchange opportunity.</inlineHelpText>
    <label>PMP Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APMP</fullName>
            </value>
            <value>
                <fullName>DPMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>