force-app/main/default/objects/Opportunity/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <inlineHelpText>Please Specify Other Reasons</inlineHelpText>
    <label>Others (Please Specify)</label>
    <type>TextArea</type>
</CustomField>