force-app/main/default/objects/Opportunity/fields/Outreach_First_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Outreach_First_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact when this opportunity was first created</description>
    <inlineHelpText>The primary contact when this opportunity was first created</inlineHelpText>
    <label>First Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (First Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>