force-app/main/default/objects/Opportunity/fields/OX_Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>OX_Spend_Type__c</fullName>
    <description>used to identify if the opportunity is being created as a new ox seat activation or if the sales person has signed up to be goaled against an existing activation</description>
    <label>OX Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Activation</fullName>
            </value>
            <value>
                <fullName>Existing Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>