force-app/main/default/objects/Opportunity/fields/Partnership_Channel__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Channel__c</fullName>
    <label>Partnership Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Channel</valueSetName>
    </valueSet>
</CustomField>