force-app/main/default/objects/Opportunity/fields/Paused_Date_Aermarket__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date_Aermarket__c</fullName>
    <label>Paused Date : Aermarket</label>
    <type>Date</type>
</CustomField>