force-app/main/default/objects/Opportunity/fields/Paused_Date_InMobi_Media__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date_InMobi_Media__c</fullName>
    <label>Paused Date : InMobi Media</label>
    <type>Date</type>
</CustomField>