force-app/main/default/objects/Opportunity/fields/Paused_Date_Mediation__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date_Mediation__c</fullName>
    <label>Paused Date : Mediation</label>
    <type>Date</type>
</CustomField>