force-app/main/default/objects/Opportunity/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <label>Placement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native placement</fullName>
            </value>
            <value>
                <fullName>Display banner</fullName>
            </value>
            <value>
                <fullName>Sponsored/shoppable Video</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>