force-app/main/default/objects/Opportunity/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional App</fullName>
            </value>
            <value>
                <fullName>Incentivized App</fullName>
            </value>
            <value>
                <fullName>Mobile Web</fullName>
            </value>
            <value>
                <fullName>iOS App</fullName>
            </value>
            <value>
                <fullName>Android App</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>