force-app/main/default/objects/Opportunity/fields/Platform_Used__c.field-meta.xml
<CustomField>
    <fullName>Platform_Used__c</fullName>
    <label>Platform Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adobe Air</fullName>
            </value>
            <value>
                <fullName>Basic4Android</fullName>
            </value>
            <value>
                <fullName>Corona Labs</fullName>
            </value>
            <value>
                <fullName>Embarcadero</fullName>
            </value>
            <value>
                <fullName>PhoneGap</fullName>
            </value>
            <value>
                <fullName>Tapjoy</fullName>
            </value>
            <value>
                <fullName>Telerik</fullName>
            </value>
            <value>
                <fullName>Unity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>