force-app/main/default/objects/Opportunity/fields/Primary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Primary Agency)</relationshipLabel>
    <relationshipName>Opportunities_Primary_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>