force-app/main/default/objects/Opportunity/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for Related Lead Information section for Meson.</description>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>