force-app/main/default/objects/Opportunity/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Created as part of Supply 2.0 changes</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P0 - High Priority</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
                <default>true</default>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>