force-app/main/default/objects/Opportunity/fields/Publisher_URL_s__c.field-meta.xml
<CustomField>
    <fullName>Publisher_URL_s__c</fullName>
    <label>Publisher URL&apos;s</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>