force-app/main/default/objects/Opportunity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Failed Trial</fullName>
            </value>
            <value>
                <fullName>Integration Issues</fullName>
            </value>
            <value>
                <fullName>Stopped responding</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Not a fit (rejected by InMobi)</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Admin Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>