force-app/main/default/objects/Opportunity/fields/Reason_for_Declining_Studio__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Declining_Studio__c</fullName>
    <label>Reason for Declining Studio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working with competitor</fullName>
            </value>
            <value>
                <fullName>Not ready for rich media</fullName>
            </value>
            <value>
                <fullName>Studio is too expensive</fullName>
            </value>
            <value>
                <fullName>Do not have the budget for Studio</fullName>
            </value>
            <value>
                <fullName>Prefer to outsource ad creation</fullName>
            </value>
            <value>
                <fullName>Don&apos;t have the internal bandwidth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>