force-app/main/default/objects/Opportunity/fields/Replenishment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Replenishment_Percentage__c</fullName>
    <label>Replenishment Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>