force-app/main/default/objects/Opportunity/fields/Revision_Stage__c.field-meta.xml
<CustomField>
    <fullName>Revision_Stage__c</fullName>
    <label>Revision Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revision In Process</fullName>
            </value>
            <value>
                <fullName>Revision Reject Complete</fullName>
            </value>
            <value>
                <fullName>Revision Approved Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>